--- a/studio.html
+++ b/studio.html
@@ -3,7 +3,8 @@
 <head>
     <title>Studio</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta property="og:title" content="Korean Eyes on E-skin (AR) —Worklog">
     <meta property="og:image" content="/images/studio/thumb.png">
     <meta property="og:image:type" content="image/png">
@@ -157,7 +158,7 @@
 
 <h3>2) Racial Color Matters</h3>  
     <p>
-    As e-skin is beyond the geographical borders, its colors are composed with racial colors. E-skin generates different beauty of skin colors while letting them non-hierarchic. This may be affected by my Asian background. Invading a scheme of black and white, yellow creates another dynamics. And, e-skin makes physical body colors more prominent. Skin is new beauty. 
+    As e-skin is beyond the geographical borders, its colors are composed with racial colors. E-skin generates different beauty of skin colors while letting them non-hierarchic. This may be affected by my Asian background. Invading the scheme of black and white, yellow creates another dynamics. And, e-skin makes physical body colors more prominent. Skin is new beauty. 
 </p>
 <br>
 <div style="margin-left:auto; margin-right:auto; width:300px;">
@@ -190,18 +191,18 @@
     Performing with e-skin develops the mimicry explained in 1). This expresses the meta-sexuality as if voguing expresses queer sexuality. Choreography is in progress. 
     </p>
     <br>
-    <div style="width:60%; margin:0px auto;">
-    <p style="text-align:center; width:100%; margin-bottom:12.5px;"> <span><</span>Test on Technical Limitation<span>></span> <br>
+    <div class="test-result" style="margin:0px auto;">
+    <p style="text-align:center; width:100%; margin-bottom:9.5px;"> <span><</span>Test on Technical Limitation<span>></span> <br>
         <!-- <span style="font-size:12px;">13 Feb 2023</span> -->
     </p>  
     
     Subject: Lips movements<br>		Software: Meta Spark AR (v.178)<br>
     
     Result:<br>
-    <p style="width:95%; margin:6.5px auto;">
+    <p style="width:97%; margin:6.5px auto;">
     Face Recognition<br>
     - Face on a horizontal camera view is not recognized. Full face is needed.</p>
-    <p style="width:95%; margin:8px auto;">Motion Perception<br>
+    <p style="width:97%; margin:8px auto;">Motion Perception<br>
     - 3D graphics have lower performance than real images. With the graphics, in general, a smaller face on screen and faster motion result in better appearance. 
     <br>- Global movement, such as turning a face and approaching to the camera, is subject to subtle discrepancy between e-skin and skin.  
     <br>- Local or micro-movement, such as smiling, is less subject to the discrepancy.
@@ -230,7 +231,7 @@
     Can e-skin be FemTech? Most services, driven by the notion of FemTech, are medical in the current market. Enhancing our skin (not only facial) differently could reveal a female or other body to us. 
 </p>
 <br><br>
-<p>If you have a comment, <br>send it to dami7060@gmail.com</p>
+<p>Send a comment<br>dami7060@gmail.com</p>
 <br><br><br><br>
 </div>
 
