--- a/studio.html
+++ b/studio.html
@@ -129,9 +129,9 @@
 </p>
 <br>
 <div style="margin-left:auto; margin-right:auto; width:300px;">
-    Asian <div style="background-color: #cfa887; width:50px; height:13px; display:inline-block;"></div> hsv (27, 35, 81)<br>
-    Black <div style="background-color: #3e2a24; width:50px; height:13px; display:inline-block;"></div> hsv (14, 42, 24)<br>
-    White <div style="background-color: #f1e9e6; width:50px; height:13px; display:inline-block;"></div> hsv (16, 5, 95)<br>
+    Asian <div style="background-color: #cfa887; width:50px; height:13px; display:inline-block;"></div> hsv (<u>27</u>, 35, 81)<br>
+    Black <div style="background-color: #3e2a24; width:50px; height:13px; display:inline-block;"></div> hsv (<u>14</u>, 42, 24)<br>
+    White <div style="background-color: #f1e9e6; width:50px; height:13px; display:inline-block;"></div> hsv (<u>16</u>, 5, 95)<br>
     Hue of Asian skin is in a different range. 
 </div>
     <br>
