--- a/studio.html
+++ b/studio.html
@@ -179,7 +179,7 @@
     <div class='video-wrap'>
       <video class="article-video" width="40%" height="auto" preload="yes" autoplay controls playsinline loop style="display:block; margin: 0 auto;">
         <source src="/images/studio/vllo11.mp4" type="video/mp4">
-        <source src="/images/studio/vllo11.webm" type="video/webm">
+<!--         <source src="/images/studio/vllo11.webm" type="video/webm"> -->
         Your browser does not support HTML5 video.
       </video>
     </div>
