--- a/studio.html
+++ b/studio.html
@@ -178,9 +178,12 @@
     <div class='scroll-spacer' style="margin-top:23px;"></div>
     <div class='video-wrap'>
       <video class="article-video" width="40%" height="auto" preload="yes" autoplay controls="true" playsinline loop style="display:block; margin: 0 auto;">
-<!--         <source src="/images/studio/vllo11.mp4" type="video/mp4"> -->
         <source src="/images/studio/vllo11.webm" type="video/webm">
-        Your browser does not support HTML5 video.
+        <source src="/images/studio/vllo11.mp4" type="video/mp4">
+            <p>
+    Your browser doesn't support HTML video. Here is a
+    <a href="/images/studio/vllo11.mp4" download="/images/studio/vllo11.mp4">link to the video</a> instead.
+  </p>
       </video>
     </div>
     <div class='scroll-spacer'></div>
