--- a/studio.html
+++ b/studio.html
@@ -178,7 +178,7 @@
     <div class='scroll-spacer' style="margin-top:23px;"></div>
     <div class='video-wrap'>
       <video class="article-video" width="40%" height="auto" preload="yes" autoplay controls="true" playsinline loop style="display:block; margin: 0 auto;">
-<!--         <source src="/images/studio/vllo11.webm" type="video/webm"> -->
+        <source src="/images/studio/vllo11.webm" type="video/webm">
         <source src="/images/studio/vllo11.mp4" type="video/mp4">
             <p>
     Your browser doesn't support HTML video. Here is a
