--- a/studio.html
+++ b/studio.html
@@ -179,7 +179,7 @@
     <div class='video-wrap'>
       <video class="article-video myVideo" width="40%" height="auto" preload="yes" autoplay controls="true" playsinline loop style="display:block; margin: 0 auto;">
         <source src="/images/studio/vllo11.webm" type="video/webm">
-        <source src="/images/studio/vllo11.mp4" type="video/mp4">
+        <source src="/images/studio/vllo11.mov" type="video/mp4">
             <p>
     Your browser doesn't support HTML video. Here is a
     <a href="/images/studio/vllo11.mp4" download="/images/studio/vllo11.mp4">link to the video</a> instead.
