--- a/studio.html
+++ b/studio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta property="og:title" content="Korean Eyes on E-skin (AR) —Worklog">
-    <meta property="og:image" content="/images/studio/thumb1.png">
+    <meta property="og:image" content="/images/studio/thumb.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="627">
